tests/baselines/reference/superInStaticMembers1(target=es2015).errors.txt
classDeclInContainingScopeStaticBlock.ts(3,7): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
classDeclInContainingScopeStaticField.ts(3,7): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
constEnumInContainingScopeStaticBlock.ts(3,12): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
constEnumInContainingScopeStaticField.ts(3,12): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
defaultImportInContainingScopeStaticBlock.ts(3,8): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
defaultImportInContainingScopeStaticField.ts(3,8): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
enumInContainingScopeStaticBlock.ts(3,6): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
enumInContainingScopeStaticField.ts(3,6): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
funcDeclInContainingScopeStaticBlock.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
funcDeclInContainingScopeStaticField.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
inContainingClassExprStaticBlock.ts(3,8): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
inContainingClassExprStaticField.ts(3,8): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
inContainingFuncExprStaticBlock.ts(3,11): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
inContainingFuncExprStaticField.ts(3,11): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(6,17): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(10,19): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(14,18): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(18,19): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(22,22): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(26,18): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(30,24): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(52,15): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(57,14): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(62,13): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(67,15): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(72,18): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(77,14): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
locals.ts(82,20): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportInContainingScopeStaticBlock.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportInContainingScopeStaticField.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfConstEnumInContainingScopeStaticBlock.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfConstEnumInContainingScopeStaticField.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfInterfaceInContainingScopeStaticBlock.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfInterfaceInContainingScopeStaticField.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfUninstantiatedNamespaceInContainingScopeStaticBlock.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namedImportOfUninstantiatedNamespaceInContainingScopeStaticField.ts(3,10): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namespaceImportInContainingScopeStaticBlock.ts(3,13): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
namespaceImportInContainingScopeStaticField.ts(3,13): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
valueNamespaceInContainingScopeStaticBlock.ts(3,11): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
valueNamespaceInContainingScopeStaticField.ts(3,11): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticBlock1.ts(3,5): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticBlock2.ts(3,7): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticBlock3.ts(3,6): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticField1.ts(3,5): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticField2.ts(3,7): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
varInContainingScopeStaticField3.ts(3,6): error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.


==== external.ts (0 errors) ====
    export class Reflect {}
    export interface Foo {}
    export declare namespace Bar { type _ = unknown; }
    export const enum Baz {}
    export default class {};
    
==== locals.ts (14 errors) ====
    export {};
    declare class B { static w(): number; }
    class C extends B {
        static _ = [
            (() => {
                var Reflect; // collision (es2015-es2021 only)
                    ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                var { Reflect } = { Reflect: null }; // collision (es2015-es2021 only)
                      ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                var [Reflect] = [null]; // collision (es2015-es2021 only)
                     ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                class Reflect {} // collision (es2015-es2021 only)
                      ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                function Reflect() {} // collision (es2015-es2021 only)
                         ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                enum Reflect {} // collision (es2015-es2021 only)
                     ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                const enum Reflect {} // collision (es2015-es2021 only)
                           ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
                super.w();
            })(),
            (() => {
                type Reflect = unknown; // no collision
                super.w();
            })(),
            (() => {
                interface Reflect {}; // no collision
                super.w();
            })(),
            (() => {
                (class Reflect {}); // no collision
                super.w();
            })(),
            (() => {
                (function Reflect() {}); // no collision
                super.w();
            })(),
        ];
    
        static {
            var { Reflect } = { Reflect: null }; // collision (es2015-es2021 only)
                  ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            var [Reflect] = [null]; // collision (es2015-es2021 only)
                 ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            var Reflect; // collision (es2015-es2021 only)
                ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            class Reflect {} // collision (es2015-es2021 only)
                  ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            function Reflect() {} // collision (es2015-es2021 only)
                     ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            enum Reflect {} // collision (es2015-es2021 only)
                 ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            const enum Reflect {} // collision (es2015-es2021 only)
                       ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
            super.w();
        }
    
        static {
            type Reflect = unknown; // no collision
            super.w();
        }
    
        static {
            interface Reflect {} // no collision
            super.w();
        }
    
        static {
            (class Reflect {}) // no collision
            super.w();
        }
    
        static {
            (function Reflect() {}) // no collision
            super.w();
        }
    }
    
==== varInContainingScopeStaticField1.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var Reflect = null; // collision (es2015-es2021 only)
        ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== varInContainingScopeStaticField2.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var { Reflect } = { Reflect: null }; // collision (es2015-es2021 only)
          ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== varInContainingScopeStaticField3.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var [Reflect] = [null]; // collision (es2015-es2021 only)
         ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== varInContainingScopeStaticBlock1.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var Reflect = null; // collision (es2015-es2021 only)
        ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== varInContainingScopeStaticBlock2.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var { Reflect } = { Reflect: null }; // collision (es2015-es2021 only)
          ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== varInContainingScopeStaticBlock3.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    var [Reflect] = [null]; // collision (es2015-es2021 only)
         ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== classDeclInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    class Reflect {} // collision (es2015-es2021 only)
          ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== classDeclInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    class Reflect {} // collision (es2015-es2021 only)
          ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== funcDeclInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    function Reflect() {} // collision (es2015-es2021 only)
             ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== funcDeclInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    function Reflect() {} // collision (es2015-es2021 only)
             ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== valueNamespaceInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    namespace Reflect {} // collision (es2015-es2021 only)
              ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== valueNamespaceInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    namespace Reflect {} // collision (es2015-es2021 only)
              ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== enumInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    enum Reflect {} // collision (es2015-es2021 only)
         ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== enumInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    enum Reflect {} // collision (es2015-es2021 only)
         ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== constEnumInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    const enum Reflect {} // collision (es2015-es2021 only)
               ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== constEnumInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    const enum Reflect {} // collision (es2015-es2021 only)
               ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== namespaceImportInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import * as Reflect from "./external"; // collision (es2015-es2021 only)
                ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== namespaceImportInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import * as Reflect from "./external"; // collision (es2015-es2021 only)
                ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== namedImportInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Reflect } from "./external"; // collision (es2015-es2021 only)
             ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== namedImportInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Reflect } from "./external"; // collision (es2015-es2021 only)
             ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== namedImportOfInterfaceInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Foo as Reflect } from "./external"; // collision (es2015-es2021 only, not a type-only import)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== namedImportOfInterfaceInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Foo as Reflect } from "./external"; // collision (es2015-es2021 only, not a type-only import)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== namedImportOfUninstantiatedNamespaceInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Bar as Reflect } from "./external"; // collision (es2015-es2021 only, not a type-only import)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== namedImportOfUninstantiatedNamespaceInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Bar as Reflect } from "./external"; // collision (es2015-es2021 only, not a type-only import)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== namedImportOfConstEnumInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Baz as Reflect } from "./external"; // collision (es2015-es2021 only)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== namedImportOfConstEnumInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import { Baz as Reflect } from "./external"; // collision (es2015-es2021 only)
             ~~~~~~~~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== typeOnlyNamedImportInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    import type { Reflect } from "./external"; // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== typeOnlyNamedImportInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    import type { Reflect } from "./external"; // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== defaultImportInContainingScopeStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import Reflect from "./external"; // collision (es2015-es2021 only)
           ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static _ = super.w();
    }
    
==== defaultImportInContainingScopeStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    import Reflect from "./external"; // collision (es2015-es2021 only)
           ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
    class C extends B {
        static { super.w(); }
    }
    
==== typeOnlyDefaultImportInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    import type Reflect from "./external"; // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== typeOnlyDefaultImportInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    import type Reflect from "./external"; // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== typeInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    type Reflect = unknown; // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== typeInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    type Reflect = unknown; // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== interfaceInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    interface Reflect {}; // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== interfaceInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    interface Reflect {}; // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== uninstantiatedNamespaceInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    declare namespace Reflect { type _ = unknown; }; // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== uninstantiatedNamespaceInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    declare namespace Reflect { type _ = unknown; }; // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== classExprInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    (class Reflect {}); // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== classExprInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    (class Reflect {}); // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== inContainingClassExprStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    (class Reflect { // collision (es2015-es2021 only)
           ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
        static {
            class C extends B {
                static _ = super.w();
            }
        }
    });
    
==== inContainingClassExprStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    (class Reflect { // collision (es2015-es2021 only)
           ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
        static {
            class C extends B {
                static { super.w(); }
            }
        }
    });
    
==== funcExprInContainingScopeStaticField.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    (function Reflect() {}); // no collision
    class C extends B {
        static _ = super.w();
    }
    
==== funcExprInContainingScopeStaticBlock.ts (0 errors) ====
    export {};
    declare class B { static w(): number; }
    (function Reflect() {}); // no collision
    class C extends B {
        static { super.w(); }
    }
    
==== inContainingFuncExprStaticField.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    (function Reflect() { // collision (es2015-es2021 only)
              ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
        class C extends B {
            static _ = super.w();
        }
    });
    
==== inContainingFuncExprStaticBlock.ts (1 errors) ====
    export {};
    declare class B { static w(): number; }
    (function Reflect() { // collision (es2015-es2021 only)
              ~~~~~~~
!!! error TS2818: Duplicate identifier 'Reflect'. Compiler reserves name 'Reflect' when emitting 'super' references in static initializers.
        class C extends B {
            static { super.w(); }
        }
    });
    